--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "today-banner",
   "version": "1.0.0",
   "description": "Daily first-come banner lock website",
-  "main": "server.js",
+  "main": "api/state.js",
   "scripts": {
-    "start": "node server.js"
+    "dev": "vercel dev",
+    "start": "vercel dev"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.57.4"
   },
   "license": "MIT"
 }
